fix docs/about page dark mode rendering

--- a/website/src/theme/FeatureCards/styles.module.css
+++ b/website/src/theme/FeatureCards/styles.module.css
@@ -26,7 +26,8 @@ element {
 }
 
 .card {
-  background-color: #fff;
+  background-color: var(--ifm-background-surface-color);
+  color: var(--ifm-font-base-color);
   border-radius: var(--ifm-card-border-radius);
   box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
   display: flex;
